fixed alignment bug

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body { /* Sets body element's width to 100% of its parent and height to 100% of 
   form {
     width: 60vw; /* Set the form width to 60% of the viewport width. */
     max-width: 500px; /* limits the width */
-    min-width: 300px; /* limits the width *
+    min-width: 300px; /* limits the width */
     margin: 0 auto; /* Center-algn the forms within its container */
     padding-bottom: 2em;
   }
